move to lowest accepted java version: 11